# RFID_TMReader

./: .gitignore  CMakeLists.txt  README.md
c_lib/: CMakeLists.txt
c_lib/api/: rfid_api.c
c_only/: CMakeLists.txt
c_test/: CMakeLists.txt
c_test/src/: main.c
c_test_only/: CMakeLists.txt  main.c
cpp_lib/: CMakeLists.txt
cpp_lib/api/: mercuryapi.cpp
cpp_only/: CMakeLists.txt
cpp_test/: CMakeLists.txt
cpp_test/src/: main.cpp
cpp_test_only/: CMakeLists.txt  config.json  main.cpp
example/: main.c
include/: mercuryapi.h
install-debug/lib/: libmercuryapi_cpp_d.so.1.0.0
install-release/include/: rfid_types.h
install/debug/lib/rfid/mercuryapi/: libmercuryapi_d.so.1  libmercuryapi_d.so.1.0.0
install/debug/lib/rfid/mercuryapi_cpp/: libmercuryapi_cpp_d.so.1  libmercuryapi_cpp_d.so.1.0.0
install/debug/rfid/mercuryapi_cpp/: libmercuryapi_cpp_d.so.1.0.0
install/include/rfid/mercuryapi_cpp/: mercuryapi.hpp
install/release/lib/rfid/mercuryapi/: libmercuryapi.so.1  libmercuryapi.so.1.0.0
install/release/lib/rfid/mercuryapi_cpp/: libmercuryapi_cpp.so.1  libmercuryapi_cpp.so.1.0.0
install/release/release/rfid/mercuryapi_cpp/: libmercuryapi_cpp.so.1.0.0
src/: mercuryapi_wrapper.c
